[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gigaam"
version = "0.1.0"
description = "GigaAM: A package for audio modeling and ASR."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "GigaChat Team" },
]

dependencies = [
    "hydra-core==1.3.*",
    "numpy==2.*",
    "omegaconf==2.3.*",
    "onnx==1.19.*",
    "onnx-asr[cpu,hub]>=0.10.2",
    "onnxruntime==1.23.*",
    "pyaudio>=0.2.14",
    "sentencepiece",
    "setuptools==81.0.0",
    "sounddevice>=0.5.5",
    "torch>=2.5,<2.9",
    "torchaudio>=2.5,<2.9",
    "tqdm",
    "webrtcvad>=2.0.10",
]

[project.optional-dependencies]
longform = [
    "torch==2.8.*",
    "torchaudio==2.8.*",
    "pyannote.audio==4.0",
    "torchcodec==0.7",
    "numba>=0.62",
]
tests = [
    "pytest",
    "pytest-cov",
    "scipy",
    "soundfile",
    "librosa",
]

[project.urls]
Homepage = "https://github.com/salute-developers/GigaAM/"

[tool.setuptools.packages.find]
include = ["gigaam"]
